pkgs/artifacts/tests/e2e/snapshots/tests__e2e__e2e_home_manager_only_config_loads.snap
---
source: tests/e2e/mod.rs
assertion_line: 298
expression: make_config
---
MakeConfiguration {
    nixos_map: {},
    home_map: {
        "test-user": {
            "home-config": ArtifactDef {
                name: "home-config",
                description: None,
                shared: false,
                files: {
                    "app-config": FileDef {
                        name: "app-config",
                        path: Some(
                            "${XDG_RUNTIME_DIR}/artifacts/home-config/app-config",
                        ),
                        owner: None,
                        group: None,
                    },
                },
                prompts: {},
                generator: "/nix/store/HASH-test_generator_config.sh",
                backend: "test",
            },
            "home-secret": ArtifactDef {
                name: "home-secret",
                description: None,
                shared: false,
                files: {
                    "secret-file": FileDef {
                        name: "secret-file",
                        path: Some(
                            "${XDG_RUNTIME_DIR}/artifacts/home-secret/secret-file",
                        ),
                        owner: None,
                        group: None,
                    },
                },
                prompts: {},
                generator: "/nix/store/HASH-test_generator_home.sh",
                backend: "test",
            },
        },
    },
    nixos_config: {},
    home_config: {},
    make_base: "/nix/store",
    make_json: "/nix/store/HASH-test.json",
}
